--- a/src/root.css
+++ b/src/root.css
@@ -10,7 +10,8 @@ body {
 .tr--from-top-exit-active,
 .tr--from-bottom-enter-active,
 .tr--from-bottom-exit-active {
-  transition: opacity 0.3s cubic-bezier(0.19, 1, 0.22, 1), transform 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: opacity 0.3s cubic-bezier(0.19, 1, 0.22, 1), transform 0.3s
+    cubic-bezier(0.19, 1, 0.22, 1);
 }
 .tr--from-top-enter,
 .tr--from-top-exit-to,
